# Pionner

./: .gitignore  CMakeLists.txt  README.md  debug_copy_assets_cmd.bat  debug_copy_objects_cmd.bat  debug_copy_shader_cmd.bat
engine/: CMakeLists.txt  main.cpp
engine/assets/level/: level_example.json
engine/assets/material/: readme.txt
engine/assets/mesh/Car/: Car.gltf
engine/assets/mesh/bulb/: bulb.mtl
engine/assets/mesh/werewolf/: license.txt
engine/assets/model/Car/: Car.gltf
engine/assets/model/demon/: scene.gltf
engine/assets/model/fortnite/: scene.gltf
engine/assets/model/werewolf/: scene.gltf
engine/assets/objects/Marry/: Marry.mtl
engine/assets/objects/spiderman/: spiderman.mtl
engine/shader/: 2d_circle.frag  2d_circle.vert  ColorCorrect.glsl  DeferredPass.glsl  DistLightShadowMap.glsl  ForwardPass.glsl  GBufferPass.glsl  GeometryPass.glsl  IBL_BrdfCnvl.glsl  IBL_DiffuseCnvl.glsl  IBL_EquirectangularToCube.glsl  LightingPass.glsl  Line.glsl  MainLightShadowCaster.glsl  MterialPreview.glsl  Outline.glsl  PtLightShadowMap.glsl  SkyBox.glsl  Sprite.glsl  TestCompile.glsl  brdf_convolution.frag  color_geometry.frag  color_geometry.vert  color_line.frag  color_line.vert  cube.vert  depth.frag  depth.vert  depth_screen2d.frag  depth_screen2d.vert  diffuse_convolution.frag  equirectangular_to_cube.frag  equirectangular_to_cube.vert  infinite_grid.frag  infinite_grid.vert  lighted_mesh.frag  lighted_mesh.vert  lighted_nor_mesh.frag  lighted_nor_mesh.vert  lighting_deferred.frag  (+34 more)
engine/shader/include/: Buffers.glslh  Common.glslh  IBL.glslh  Lighting.glslh  Materials.glslh  Normal.glslh  PBR.glslh  Skeleton.glslh
engine/source/editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h
engine/source/editor/include/: Editor.h  EditorUI.h
engine/source/editor/source/: Editor.cpp  EditorUI.cpp
engine/source/editor/view/: BottomPanelView.cpp  BottomPanelView.h  LeftPanelView.cpp  LeftPanelView.h  RenderView.cpp  RenderView.h  RightPanelView.cpp  RightPanelView.h  VisualAngleView.cpp  VisualAngleView.h
engine/source/runtime/: CMakeLists.txt  Engine.cpp  Engine.h
engine/source/runtime/db/: ReadFile.cpp  ReadFile.h
engine/source/runtime/event/: Event.cpp  Event.h  EventMgr.h  MotionEvent.h
engine/source/runtime/function/: SystemBase.h
engine/source/runtime/gfx/: GfxDef.h
engine/source/runtime/global/: GlobalContext.cpp  GlobalContext.h  GlobalDef.h  PioEntity.cpp  PioEntity.h  PioWorld.cpp  PioWorld.h  SystemBase.h
engine/source/runtime/matl/: Material.cpp  Material.h
engine/source/runtime/render/: RenderDef.h  RenderSystem.cpp  RenderSystem.h
engine/source/runtime/render2/: ForwardRender.cpp  ForwardRender.h  Render.cpp  Render.h  RenderSystem.cpp  RenderSystem.h
engine/source/runtime/scenegraph/: Scene.cpp  Scene.h  SceneGrfDef.h  SceneGrfObject.cpp  SceneGrfObject.h
engine/source/runtime/window/: WindowSystem.cpp  WindowSystem.h
engine/source/runtime/world/: Entity.cpp  Entity.h  PioWorld.cpp  PioWorld.h  World.cpp  World.h
engine/src/: Application.cpp  Application.h  Base.h  CMakeLists.txt  Common.h  Editor.cpp  Editor.h  Entry.h  GlobalSettings.cpp  GlobalSettings.h
engine/src/animation/: AnimDef.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  Skeleton.cpp  Skeleton.h
engine/src/asset/: Asset.cpp  Asset.h  AssetMgr.cpp  AssetMgr.h  AssetsManager.cpp  AssetsManager.h  AssimpAnimationImporter.cpp  AssimpAnimationImporter.h  AssimpMeshImporter.cpp  AssimpMeshImporter.h  AssimpUtils.cpp  AssimpUtils.h  ImageImporter.cpp  ImageImporter.h  ImageUtils.cpp  ImageUtils.h  MaterialImporter.cpp  MaterialImporter.h  StbUtils.h
engine/src/base/: Base.h  Buffer.cpp  Buffer.h  CPosition.cpp  CPosition.h  CommandQueue.cpp  CommandQueue.h  Common.h  Def.h  EulerAngle.cpp  EulerAngle.h  LinkedMap.h  LogSystem.h  Math.h  Position3d.cpp  Position3d.h  QuatUtil.cpp  QuatUtil.h  SphereCoord.cpp  SphereCoord.h  Thread.cpp  Thread.h  Transform.h  Transform3D.cpp  Transform3D.h  Types.h  UUID.cpp  UUID.h
engine/src/base/defs/: FunDef.h  MathDef.cpp  MathDef.h  TypeDef.h
engine/src/base/utils/: FileUtil.cpp  FileUtil.h  ImageUtil.cpp  ImageUtil.h  LogSystem.cpp  LogSystem.h  StringUtil.cpp  StringUtil.h  SystemUtil.cpp  SystemUtil.h  SystemUtils.h  Time.cpp  Time.h
engine/src/core/: Base.cpp  Base.h  BaseType.h  Buffer.cpp  Buffer.h  CommandQueue.cpp  CommandQueue.h  CoreType.h  EventBus.cpp  EventBus.h  EventBusDef.h  InterfaceDef.h  LinkedMap.h  LogSystem.h  Thread.h  UUID.cpp  UUID.h
engine/src/core/func/: Drawable.h  Movable.h
engine/src/core/hittable/: Hittable.h  HittableShape.h
engine/src/core/interface/: Drawable.h  Movable.h
engine/src/core/math/: AABB.cpp  AABB.h  CPosition.cpp  CPosition.h  Camera.cpp  (+25 more)
engine/src/event/: AppEvent.cpp  AppEvent.h  Cursor.h  EBDef.h  Event.h  EventBus.h  EventHandler.h  EventHub.cpp  EventHub.h  KeyCodes.h  KeyEvent.cpp  KeyEvent.h  MouseCodes.h  MouseEvent.cpp  MouseEvent.h
engine/src/gfx/: GfxDef.cpp  GfxDef.h  GraphicsContext.cpp  GraphicsContext.h
engine/src/physics/: PhysXInternal.cpp  PhysXInternal.h  PhysXUtils.cpp  PhysXUtils.h  PhysicsActor.cpp  PhysicsActor.h  PhysicsDef.h  PhysicsMaterial.cpp  PhysicsMaterial.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsShape.cpp  PhysicsShape.h  PhysicsSystem.cpp  PhysicsSystem.h
engine/src/platform/: SystemUtils.cpp  SystemUtils.h
engine/src/scene/: Camera.cpp  Camera.h  Components.h  Entity.cpp  Entity.h  Factory.cpp  Factory.h  Frustum.cpp  Frustum.h  Light.cpp  Light.h  OrthographicFrustum.cpp  OrthographicFrustum.h  Registry.cpp  Registry.h  Scene.cpp  Scene.h  SceneDef.h  SceneMgr.cpp  SceneMgr.h  Skybox.cpp  Skybox.h  TierSetting.h
engine/src/ui/: ImGuiUtils.cpp  ImGuiUtils.h  Layer.cpp  Layer.h  LayerMgr.cpp  LayerMgr.h  LayerStack.cpp  LayerStack.h  MaterialInspector.cpp  MaterialInspector.h  MotionController.cpp  MotionController.h  RuntimeLayer.cpp  RuntimeLayer.h  Ui3D.cpp  Ui3D.h  UiDef.cpp  UiDef.h  View.cpp  View.h  ViewMgr.cpp  ViewMgr.h
engine/src/window/: Window.cpp  Window.h
(+788 files in other folders)
